--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -3185,7 +3185,93 @@
 
 
     /* blog details end  */
+/*========================== Gallery Page ==========================*/
+.gallery-view {
+    margin-bottom: 10px;
+}
+.gallery-view .item a {
+    max-height: 290px;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    float: left;
+    transition: transform 300ms ease 0ms;
+}
+.gallery-view .item a i{
+    display: none;
+    position: absolute;
+    color: #fff;
+    z-index: 9;
+    top: 40%;
+    left: 45%;
+    font-size: 40px;
+}
+.gallery-view .item a:hover::before{
+    content: '';
+    position: absolute;
+    background: #0000006e;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+}
+.gallery-view .item a:hover i{
+    display: block;
+}
+.gallery-view .item a > img {
+    -webkit-transition: -webkit-transform 0.15s ease 0s;
+    -moz-transition: -moz-transform 0.15s ease 0s;
+    -o-transition: -o-transform 0.15s ease 0s;
+    transition: transform 0.15s ease 0s;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    height: 100%;
+    width: 100%;
+}
+.gallery-view .item a:hover > img {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+    transform: scale3d(1.1, 1.1, 1.1);
+}
+.gallery{
+    text-align: center;
+}
+.gallery button{
+    background: transparent;
+    color: #34533f;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 5px 15px 5px 15px;
+    text-transform: uppercase;
+    border: solid 1px rgba(0,0,0,.1);
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.gallery .btn.active, .btn:active{
+    box-shadow: none;
+    outline: none;
+}
+.gallery .btn:hover{
+    box-shadow: none;
+    outline: none;
+    border-color: #003579;
+    color: #003579;
+}
+.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus{
+    outline: none;
+    box-shadow: none;
+}
 
+#lightgallery .item{
+    display: inline-block;
+    margin-bottom: 30px;
+} 
+.video-item{
+    margin-bottom: 30px;
+}
+/*****************************
+19 - Components - Portfolio
+*****************************/
 
 
 }
