--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -2051,7 +2051,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 8px;
+    /* gap: 8px; */
 }
 
 .sec-univ-name {
