--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -72,6 +72,27 @@
     flex-direction: column;
 
     }
+    .n-content{
+        width: auto !important;
+    }
+    .share-btns{
+        flex-direction: column-reverse;
+    }
+    .social-icons{
+        flex-direction: row !important;
+        justify-content: center;
+    }
+    .inner-circle{
+        width: 35px !important;
+        height: 32px !important;
+    }
+    .icon{
+        font-size: 20px !important;
+    }
+    .outer-circle{
+        width: 38px !important;
+        height: 38px !important;
+    }
 }
 
 @media(min-width:768px) and (max-width:991px){
