--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -930,6 +930,7 @@
     line-height: 24px;
     color: #3D3D3D;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
 .unique-button {
@@ -2171,7 +2172,7 @@
 .b-title {
     width: 100%;
     color: white;
-    font-size: 48px;
+    font-size: 35px;
     font-family: Poppins;
     font-weight: 600;
     line-height: 62.40px;
