--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -1619,6 +1619,7 @@
 }
 
 .description {
+    text-align: justify;
     color: #3D3D3D;
     font-size: 16px;
     font-family: Poppins;
@@ -1746,6 +1747,7 @@
         flex-direction: column;
         left: auto;
         top: auto;
+        margin-top: 20px;
     }
 
     .indicator-item {
@@ -2833,6 +2835,7 @@
 }
 
 .sub-paragraph.know-more-about-a {
+    text-align: justify;
     color: #616161;
     font-size: 16px;
     font-family: Poppins;
@@ -2921,6 +2924,7 @@
 }
 
 .answer {
+    text-align: justify;
     display: none;
     padding: 10px;
     background-color: #fff;
