--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -5,6 +5,9 @@
     --dark: #0E2E50;
 } */
 
+a{
+    text-decoration: none !important;
+}
 
 @media (min-width:768px) and (max-width:991px) {
     .ifra {
@@ -260,7 +263,7 @@
 
 .py-6 {
     padding-top: 3rem;
-    padding-bottom: 3rem;
+    /* padding-bottom: 3rem; */
 }
 
 
@@ -2036,7 +2039,7 @@
 
 .sec-univ-container {
     width: 100%;
-    display: flex;
+    /* display: flex; */
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
