--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -115,6 +115,9 @@ a{
     .unique-statistics {
         margin-left: -19px;
     }
+    .chota-size{
+        font-size: 12px;
+    }
 }
 
 
@@ -163,6 +166,9 @@ a{
         width: 38px !important;
         height: 38px !important;
     }
+    .custom-container {
+        margin-top: 0 !important;
+    }
 }
 
 @media(min-width:768px) and (max-width:991px){
@@ -173,7 +179,23 @@ a{
 
 }
 
+@media(min-width:426.1px){
+    .office-where{
+        display: flex !important;
+    }
+    .office-where-show{
+        display: none !important;
+    }
+    .big-screen-office{
+        display: none !important;
+    }
+}
 
+@media(max-width:321px){
+    .chota-size{
+        font-size: 12px;
+    }
+}
 
 @media(max-width:426px) {
     .custom-images-container img {
@@ -217,6 +239,24 @@ a{
     .abroad-col{
         flex-direction: column;
     }
+    .image-hder{
+        margin-left: 0 !important;
+    }
+    .office-where{
+        display: none !important;
+    }
+    .office-where-show{
+        display: flex !important;
+    }
+    .nav-border-small{
+        border-style: inset;
+    }
+    .for-small{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
 }
 
 
@@ -389,7 +429,7 @@ a{
 
 .sticky-top.navbar .navbar-nav .nav-link:hover,
 .sticky-top.navbar .navbar-nav .nav-link.active {
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
 }
 
 .navbar .navbar-brand h1 {
@@ -427,7 +467,8 @@ a{
 
     .navbar .navbar-nav .nav-link:hover,
     .navbar .navbar-nav .nav-link.active {
-        color: var(--primary);
+        /* color: var(--primary); */
+        color: rgba(207, 19, 18, 1);
     }
 
     .navbar .navbar-brand h1 {
@@ -1844,7 +1885,7 @@ a{
         flex-direction: column;
         left: auto;
         top: auto;
-        margin-top: 20px;
+        /* margin-top: 20px; */
     }
 
     .indicator-item {
