--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -254,7 +254,7 @@ a{
 
 @media(max-width:426px) {
     .right-kani{
-        margin-left: 18px;
+        margin-left: 17px !important;
         margin-top: 60px !important;
     }
     .studyk-mobile-me{
