--- a/public/website/css/style.css
+++ b/public/website/css/style.css
@@ -62,6 +62,16 @@ a{
 
 }
 
+@media (min-width:991px) and (max-width:1175px) {
+
+.image-hder{
+    margin-left: 30px;
+}
+.navbar .navbar-nav .nav-link {
+    margin-left: 10px !important
+}
+}
+
 @media (min-width:991px) and (max-width:1400px) {
     .test-res {
         margin-left: -50px !important;
@@ -90,12 +100,6 @@ a{
     }
     .upri-navbar{
         padding: 0 !important;
-    }
-    .image-hder{
-        margin-left: 30px;
-    }
-    .navbar .navbar-nav .nav-link {
-        margin-left: 10px !important
     }
 }
 
